# libparallelproj

./: .buildinfo  .gitignore  .readthedocs.yaml  CMakeLists.txt  CMakePresets.json  Doxyfile.in  README.md  TODO.md  c_api.html  environment.yml  environment_cuda.yml  environment_cuda12_build_only.yml  environment_cuda13_build_only.yml  environment_cuda_build_only.yml  genindex.html  index.html  objects.inv  pixi.toml  py-modindex.html  python_api.html  search.html  searchindex.js
.doctrees/: c_api.doctree  environment.pickle  index.doctree  python_api.doctree
.github/workflows/: build_and_test.yml  build_cuda.yml  build_docs.yml  check_version.yml
_modules/: index.html
_sources/: c_api.rst.txt  python_api.rst.txt
_static/: documentation_options.js
cmake/: parallelprojConfig.cmake.in
docs/: .gitignore  Makefile  PYTHON_DOCS_SETUP.md  README.md  c_api.rst  changelog.rst  conf.py  environment.yaml  index.rst  installation.rst  python_api.rst  refs.bib  requirements.txt  theory_background.rst
docs/_static/: plot_tof_kernel.py
docs/examples/: 00_basic_projection.py  01_tof_sinogram_projection.py  02_tof_lm_projection.py  03_mini_torch.py  03_torch_projection.py  README.rst  utils.py
include/: cuda_utils.h  parallelproj.h  utils.h
python/: bindings.cpp
recipe/: recipe.yaml  recipe_local.yaml
scripts/: tag_release.py
src/: cuda_utils.cu  joseph3d_back.cpp  joseph3d_back.cu  joseph3d_back_worker.h  joseph3d_fwd.cpp  joseph3d_fwd.cu  joseph3d_fwd_worker.h  joseph3d_tof_lm_back.cpp  joseph3d_tof_lm_back.cu  joseph3d_tof_lm_back_worker.h  joseph3d_tof_lm_fwd.cpp  joseph3d_tof_lm_fwd.cu  joseph3d_tof_lm_fwd_worker.h  joseph3d_tof_sino_back.cpp  joseph3d_tof_sino_back.cu  joseph3d_tof_sino_back_worker.h  joseph3d_tof_sino_fwd.cpp  joseph3d_tof_sino_fwd.cu  joseph3d_tof_sino_fwd_worker.h  parallelproj_info.cpp
tests/: config.py  conftest.py  cuda_test_utils.h  file_utils.h  file_utils.tpp  test_bilinear_interp_adj.cpp  test_bilinear_interp_adj_cuda.cu  test_bilinear_interp_cuda.cu  test_handle_cuda_input_array.cu  test_invalid_arguments.py  test_nontof_fwd_back.cpp  test_nontof_fwd_back.py  test_nontof_fwd_back_cuda.cu  test_ray_cube_intersection.cpp  test_ray_cube_intersection_cuda.cu  test_tof_lm_projection.py  test_tof_sinogram_projection.py  test_version.py
wip/: test_lm.py  trigger_cuda_malloc_error.py
